<resources>
    <string name="app_name">Jeubeub</string>
    <string name="app_id">416182164062</string>
    <string name="jeubeub">Jeubeub</string>
    <string name="shop_label">Boutique</string>
    <string name="games_label">Jeux</string>
    <string name="friends_label">Amis</string>
    <string name="leaderbord_label">Leaderboard</string>
    <string name="label_item_2">Item 2 2.99€</string>
    <string name="label_item_1">Item 1 0.99€</string>
    <string name="default_friend_name">nom de l\'ami</string>
    <string name="description_profile_image">profile image</string>
    <string name="invite_friend">Inviter</string>
    <string name="description_item">item_description</string>
    <string name="buy_button">Acheter</string>
    <string name="nom_item_default">Nom article</string>
    <string name="default_price">0€</string>
    <string name="voir_profil">Profil</string>
    <string name="morpion">Morpion</string>
    <string name="nombre_de_victoire">Nombre de victoire</string>
    <string name="id_leaderboard_morpion_victoire">CgkI3rSPs44MEAIQAg</string>
    <string name="nombre_de_defaite">Nombre de defaite</string>
    <string name="id_leaderboard_morpion_defaite">CgkI3rSPs44MEAIQAw</string>
    <string name="Inventaire">Inventaire</string>
    <string name="default_quantity">0</string>

</resources>